Fixed 'Top menu links distorted at first load'

--- a/css/custom1.css
+++ b/css/custom1.css
@@ -10789,7 +10789,9 @@ button, .md-button {
 
 .top-nav-bar-links {
   padding-left: 2.5em;
-  float: left; }
+  float: left;
+  flex-direction: row;
+  display: flex; }
 
 .search-elements-wrapper {
   max-width: 80% !important; }
