--- a/css/sass/kb-primo-design/_header.scss
+++ b/css/sass/kb-primo-design/_header.scss
@@ -53,6 +53,8 @@ button, .md-button {
 .top-nav-bar-links {
   padding-left: 2.5em;
   float: left;
+  flex-direction: row;
+  display: flex;
 }
 
 .search-elements-wrapper{
